@@ -60,6 +60,14 @@ class TestContent < Highscore::TestCase
     assert_equal 4, keywords.length
   end
 
+  def test_ignore_custom
+    keywords = 'foobar a3832'.keywords do
+      set :ignore, lambda { |w| w.gsub(/[^0-9]/, '').length > 2 }
+    end
+
+    assert_equal 1, keywords.length
+  end
+
   def test_word_pattern
     keywords = 'foo Ruby foo Ruby'.keywords do
       set :word_pattern, /(?=(\b\w+\s\w+\b))/
